--- a/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
+++ b/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
@@ -36,6 +36,9 @@
     <Reference Include="AxInterop.WMPLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\WMPLib.1.0.0\lib\AxInterop.WMPLib.dll</HintPath>
     </Reference>
+    <Reference Include="CircularProgressBar, Version=2.8.0.16, Culture=neutral, PublicKeyToken=310fd07b25df79b3, processorArchitecture=MSIL">
+      <HintPath>..\packages\CircularProgressBar.2.8.0.16\lib\net40\CircularProgressBar.dll</HintPath>
+    </Reference>
     <Reference Include="Control.Draggable, Version=1.0.5049.269, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Control.Draggable.1.0.5049.269\lib\net35-Client\Control.Draggable.dll</HintPath>
     </Reference>
@@ -54,6 +57,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WinFormAnimation, Version=1.6.0.4, Culture=neutral, PublicKeyToken=310fd07b25df79b3, processorArchitecture=MSIL">
+      <HintPath>..\packages\WinFormAnimation.1.6.0.4\lib\net40\WinFormAnimation.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs" />
@@ -71,6 +77,19 @@
     <Compile Include="SortingGame.Designer.cs">
       <DependentUpon>SortingGame.cs</DependentUpon>
     </Compile>
+    <Compile Include="StartMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StartMenu.Designer.cs">
+      <DependentUpon>StartMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StartMenuControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="StartMenuControl.Designer.cs">
+      <DependentUpon>StartMenuControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Statistics.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -85,6 +104,12 @@
     </Compile>
     <EmbeddedResource Include="SortingGame.resx">
       <DependentUpon>SortingGame.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StartMenu.resx">
+      <DependentUpon>StartMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StartMenuControl.resx">
+      <DependentUpon>StartMenuControl.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="bin\Debug\DeweyDecimal_Latest.exe.config" />
     <None Include="packages.config" />
@@ -102,7 +127,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="bin\Debug\Media\" />
     <Folder Include="Sound_Effects\" />
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +135,12 @@
     <Content Include="bin\Debug\DeweyDecimal_Latest.exe" />
     <Content Include="bin\Debug\DeweyDecimal_Latest.pdb" />
     <Content Include="bin\Debug\Images\Library.jpg" />
+    <Content Include="bin\Debug\Images\podium.png" />
+    <Content Include="bin\Debug\Media\lose.mp3" />
+    <Content Include="bin\Debug\Media\Piano.mp3" />
+    <Content Include="bin\Debug\Media\pickup.mp3" />
+    <Content Include="bin\Debug\Media\Success.mp3" />
+    <Content Include="bin\Debug\Media\Wink.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
