--- a/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
+++ b/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
@@ -63,12 +63,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs" />
+    <Compile Include="BookPlacementHandler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameTimer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortingGame.cs">
@@ -77,6 +79,7 @@
     <Compile Include="SortingGame.Designer.cs">
       <DependentUpon>SortingGame.cs</DependentUpon>
     </Compile>
+    <Compile Include="SoundPlayer.cs" />
     <Compile Include="StartMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +93,18 @@
       <DependentUpon>StartMenuControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Statistics.cs" />
+    <Compile Include="StatisticsControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="StatisticsControl.Designer.cs">
+      <DependentUpon>StatisticsControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StatisticsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StatisticsForm.Designer.cs">
+      <DependentUpon>StatisticsForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +125,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="StartMenuControl.resx">
       <DependentUpon>StartMenuControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StatisticsControl.resx">
+      <DependentUpon>StatisticsControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StatisticsForm.resx">
+      <DependentUpon>StatisticsForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="bin\Debug\DeweyDecimal_Latest.exe.config" />
     <None Include="packages.config" />
@@ -134,8 +155,13 @@
     <Content Include="bin\Debug\Control.Draggable.dll" />
     <Content Include="bin\Debug\DeweyDecimal_Latest.exe" />
     <Content Include="bin\Debug\DeweyDecimal_Latest.pdb" />
+    <Content Include="bin\Debug\Images\BookShelfNew.png" />
+    <Content Include="bin\Debug\Images\clock.png" />
     <Content Include="bin\Debug\Images\Library.jpg" />
     <Content Include="bin\Debug\Images\podium.png" />
+    <Content Include="bin\Debug\Images\Restart.png" />
+    <Content Include="bin\Debug\Images\time.png" />
+    <Content Include="bin\Debug\Images\WhiteBack.png" />
     <Content Include="bin\Debug\Media\lose.mp3" />
     <Content Include="bin\Debug\Media\Piano.mp3" />
     <Content Include="bin\Debug\Media\pickup.mp3" />
