--- a/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
+++ b/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
@@ -42,6 +42,9 @@
     <Reference Include="Control.Draggable, Version=1.0.5049.269, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Control.Draggable.1.0.5049.269\lib\net35-Client\Control.Draggable.dll</HintPath>
     </Reference>
+    <Reference Include="DeweyDecimalTimer">
+      <HintPath>..\DeweyDecimalTimer\bin\Debug\DeweyDecimalTimer.dll</HintPath>
+    </Reference>
     <Reference Include="Interop.WMPLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\WMPLib.1.0.0\lib\Interop.WMPLib.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
@@ -71,7 +74,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GameTimer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortingGame.cs">
@@ -158,14 +160,7 @@
     <Content Include="bin\Debug\DeweyDecimal_Latest.pdb" />
     <Content Include="bin\Debug\Images\BackgroundRoom.jpg" />
     <Content Include="bin\Debug\Images\BookShelfNew.png" />
-    <Content Include="bin\Debug\Images\clock.png" />
-    <Content Include="bin\Debug\Images\Library.jpg" />
     <Content Include="bin\Debug\Images\MenuBackground.jpg" />
-    <Content Include="bin\Debug\Images\Pause.png" />
-    <Content Include="bin\Debug\Images\podium.png" />
-    <Content Include="bin\Debug\Images\Restart.png" />
-    <Content Include="bin\Debug\Images\StatsBackground.jpg" />
-    <Content Include="bin\Debug\Images\time.png" />
     <Content Include="bin\Debug\Images\WhiteBack.png" />
     <Content Include="bin\Debug\Media\lose.mp3" />
     <Content Include="bin\Debug\Media\Piano.mp3" />
