--- a/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
+++ b/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
@@ -36,14 +36,8 @@
     <Reference Include="AxInterop.WMPLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\WMPLib.1.0.0\lib\AxInterop.WMPLib.dll</HintPath>
     </Reference>
-    <Reference Include="CircularProgressBar, Version=2.8.0.16, Culture=neutral, PublicKeyToken=310fd07b25df79b3, processorArchitecture=MSIL">
-      <HintPath>..\packages\CircularProgressBar.2.8.0.16\lib\net40\CircularProgressBar.dll</HintPath>
-    </Reference>
     <Reference Include="Control.Draggable, Version=1.0.5049.269, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Control.Draggable.1.0.5049.269\lib\net35-Client\Control.Draggable.dll</HintPath>
-    </Reference>
-    <Reference Include="DeweyDecimalTimer">
-      <HintPath>..\..\..\DeweyDecimal_Latest\DeweyDecimalTimer\bin\Debug\DeweyDecimalTimer.dll</HintPath>
     </Reference>
     <Reference Include="Interop.WMPLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\WMPLib.1.0.0\lib\Interop.WMPLib.dll</HintPath>
@@ -167,6 +161,12 @@
     <Content Include="bin\Debug\Media\pickup.mp3" />
     <Content Include="bin\Debug\Media\Success.mp3" />
     <Content Include="bin\Debug\Media\Wink.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TimerLib\TimerLib.csproj">
+      <Project>{755f3e12-bec6-4ead-af0f-7db096b90759}</Project>
+      <Name>TimerLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
