--- a/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
+++ b/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
@@ -33,15 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AxInterop.WMPLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\WMPLib.1.0.0\lib\AxInterop.WMPLib.dll</HintPath>
-    </Reference>
     <Reference Include="Control.Draggable, Version=1.0.5049.269, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Control.Draggable.1.0.5049.269\lib\net35-Client\Control.Draggable.dll</HintPath>
-    </Reference>
-    <Reference Include="Interop.WMPLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\WMPLib.1.0.0\lib\Interop.WMPLib.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -60,7 +53,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Book.cs" />
+    <Compile Include="IdentifyingAreascs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IdentifyingAreascs.Designer.cs">
+      <DependentUpon>IdentifyingAreascs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MatchColumn_Control.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MatchColumn_Control.Designer.cs">
+      <DependentUpon>MatchColumn_Control.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AreaBook.cs" />
+    <Compile Include="Models\Book.cs" />
     <Compile Include="BookPlacementHandler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -76,7 +82,7 @@
     <Compile Include="SortingGame.Designer.cs">
       <DependentUpon>SortingGame.cs</DependentUpon>
     </Compile>
-    <Compile Include="SoundPlayer.cs" />
+    <Compile Include="Models\SoundPlayer.cs" />
     <Compile Include="StartMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,7 +95,7 @@
     <Compile Include="StartMenuControl.Designer.cs">
       <DependentUpon>StartMenuControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Statistics.cs" />
+    <Compile Include="Models\Statistics.cs" />
     <Compile Include="StatisticsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -104,6 +110,12 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IdentifyingAreascs.resx">
+      <DependentUpon>IdentifyingAreascs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MatchColumn_Control.resx">
+      <DependentUpon>MatchColumn_Control.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
