--- a/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
+++ b/DeweyDecimal_Latest/DeweyDecimal_Latest.csproj
@@ -244,12 +244,22 @@
     <Content Include="bin\Debug\Images\MenuBackground.jpg" />
     <Content Include="bin\Debug\Images\pause-button.png" />
     <Content Include="bin\Debug\Images\WhiteBack.png" />
+    <Content Include="bin\Debug\Media\Adventure.mp3" />
     <Content Include="bin\Debug\Media\lose.mp3" />
     <Content Include="bin\Debug\Media\Piano.mp3" />
     <Content Include="bin\Debug\Media\pickup.mp3" />
     <Content Include="bin\Debug\Media\Success.mp3" />
     <Content Include="bin\Debug\Media\violinLose.mp3" />
     <Content Include="bin\Debug\Media\Wink.mp3" />
+    <None Include="Resources\Adventure.mp3" />
+    <Content Include="Resources\blue_elipse.png" />
+    <None Include="Resources\ReadyButton.png" />
+    <None Include="Resources\pink_ellipse.png" />
+    <None Include="Resources\home_button.png" />
+    <None Include="Resources\exit_button.png" />
+    <None Include="Resources\exit_ellipse.png" />
+    <None Include="Resources\orange_ellipse.png" />
+    <None Include="Resources\purple_ellipse.png" />
     <None Include="Resources\lives.png" />
     <None Include="Resources\WhiteBack.png" />
     <None Include="Resources\BookShelfNew.png" />
